test/scc/lex/errors/config.py
cmds = ['%test', '-lex-only', '-log', '%output']